<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021 The LineageOS Project
     
     SPDX-License-Identifier: Apache-2.0
-->
<resources>
     <!-- Pick-up to wake gesture-->
     <string name="wake_gesture_title">Wake up</string>
     <string name="wake_gesture_summary">Wake up the device instead of pulsing notifications</string>
     <!-- Thermal Profiles -->
     <string name="thermal_title">Thermal Profiles</string>
     <string name="thermal_summary">Adjust per-app thermal profiles for optimum performance</string>
     <string name="thermal_default">Default</string>
     <string name="thermal_benchmark">Benchmark</string>
     <string name="thermal_browser">Browser</string>
     <string name="thermal_camera">Camera</string>
     <string name="thermal_dialer">Dialer</string>
     <string name="thermal_gaming">Gaming</string>
     <string name="thermal_streaming">Streaming</string>
     <!-- Dirac settings -->
     <string name="dirac_title">Dirac sound enhancer</string>
     <string name="dirac_summary">Use Dirac sound enhancer when using headphones</string>
     <string name="dirac_headset_title">Headset type</string>
     <string name="dirac_hifi_enable_title"> Enable Hi-fi</string>
     <string name="dirac_preset_title">Sound preset</string>
     <string name="dirac_hifi_title">Hi-Fi</string>
     <string name="dirac_hifi_summary">Decrease noise and Distortion and increase audio quality</string>
     <string name="dirac_headset_default">Default</string>
     <string name="dirac_headset_earbuds">Mi Earbuds</string>
     <string name="dirac_headset_in_ear_2013">Mi In-Ear (2013)</string>
     <string name="dirac_headset_piston_1">Mi Piston 1</string>
     <string name="dirac_headset_general">General Earbuds</string>
     <string name="dirac_headset_general_inear">General In-Ear</string>
     <string name="dirac_headset_piston_basic">Basic Edition</string>
     <string name="dirac_headset_piston_2">Mi Piston 2</string>
     <string name="dirac_headset_piston_standard">Mi Piston 3</string>
     <string name="dirac_headset_headphone">Mi Headphone</string>
     <string name="dirac_headset_piston_youth">Youth Edition</string>
     <string name="dirac_headset_piston_color">Color Edition</string>
     <string name="dirac_headset_in_ear">Mi In-Ear</string>
     <string name="dirac_headset_capsule">Mi Capsule</string>
     <string name="dirac_headset_in_ear_pro">Mi In-Ear Pro</string>
     <string name="dirac_headset_comfort">Mi Comfort</string>
     <string name="dirac_headset_reduction_noise">Mi Noise Cancelling (Type-C)</string>
     <string name="dirac_headset_cancelling">Mi Noise Cancelling (3.5mm)</string>
     <string name="dirac_headset_half_in_ear">Mi Half In-Ear</string>
     <string name="dirac_headset_in_ear2">Mi In-Ear 2</string>
     <string name="dirac_headset_earphone_basic">Mi Earphones Basic</string>
     <string name="dirac_headset_earphone">Mi Earphones</string>
     <string name="dirac_preset_default">Default</string>
     <string name="dirac_preset_rock">Rock</string>
     <string name="dirac_preset_jazz">Jazz</string>
     <string name="dirac_preset_pop">Pop</string>
     <string name="dirac_preset_classical">Classical</string>
     <string name="dirac_preset_hiphop">Hiphop</string>
     <string name="dirac_preset_blues">Blues</string>
     <string name="dirac_preset_electronic">Electronic</string>
     <string name="dirac_preset_country">Country</string>
     <string name="dirac_preset_dance">Dance</string>
     <string name="dirac_preset_metal">Metal</string>
     <string name="dirac_preset_bass_booster">Bass Booster</string>
     <!-- QS tile title -->
     <string name="dirac_qs_tile_title">Dirac Sound Enhancer</string>
     <!-- Clear Speaker -->
     <string name="clear_speaker_title">Clear speaker</string>
     <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
     <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2-5 times while shaking your device with the speaker facing downwards.</string>
     <!-- Ambient settings -->
     <string name="ambient_enable">Use ambient display</string>
     <string name="doze_brightness_title">Always on brightness</string>
     <string name="doze_brightness_summary">%s mode is enabled</string>
</resources>