<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2022 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/dirac_title">
    <com.android.settingslib.widget.MainSwitchPreference
        android:defaultValue="false"
        android:key="dirac_enable"
        android:title="@string/dirac_enable" />
    <ListPreference
        android:key="dirac_headset_pref"
        android:entries="@array/dirac_headset_pref_entries"
        android:entryValues="@array/dirac_headset_pref_values"
        android:defaultValue="0"
        android:title="@string/dirac_headset_title"
        android:summary="%s" />
    <ListPreference
        android:key="dirac_preset_pref"
        android:entries="@array/dirac_preset_pref_entries"
        android:entryValues="@array/dirac_preset_pref_values"
        android:defaultValue="0,0,0,0,0,0,0"
        android:title="@string/dirac_preset_title"
        android:summary="%s" />
    <PreferenceCategory
        android:key="dirac_hifi"
        android:title="@string/dirac_hifi_title">
        <SwitchPreference
            android:key="dirac_hifi_pref"
            android:defaultValue="false"
            android:title="@string/dirac_hifi_enable_title"
            android:summary="@string/dirac_hifi_summary"/>
    </PreferenceCategory>
</PreferenceScreen>